fix: visual hierarchy in footer text sizes
Footer text links should always be 16px. And prevents footer paragraph
text from getting too small at the smallest breakpoint. Making sure
copyright text and links are not the same size as the other footer text.

--- a/blocks/footer-links/footer-links.css
+++ b/blocks/footer-links/footer-links.css
@@ -6,6 +6,7 @@
   justify-content: flex-start;
   flex-wrap: wrap;
   gap: 0.5rem;
+  font-size: var(--spectrum-font-size-200);
 
   & li {
     flex: 1 0 45%;
